# analog-vst-bootstrap

./: .gitignore  BassFukz-0.0.1.pkg  CMakeLists.txt  Makefile  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Circuits/: TransistorClipper.cpp  TransistorClipper.h
Source/Components/Analog/: Capacitor.cpp  Capacitor.h  Diode.cpp  Diode.h  OpAmp.cpp  OpAmp.h  Potentiometer.cpp  Potentiometer.h  Resistor.cpp  Resistor.h  Transistor.cpp  Transistor.h
scripts/: create_package.sh
